shell/panelview.cpp
@@ -579,7 +579,10 @@ void PanelView::showConfigurationInterface(Plasma::Applet *applet)
 void PanelView::restoreAutoHide()
 {
     setAutoHideEnabled(edgeActivated()
-        && (!containment() || containment()->status() < Plasma::Types::RequiresAttentionStatus)
+        && (!containment() ||
+                (containment()->status() < Plasma::Types::RequiresAttentionStatus
+                 || containment()->status() == Plasma::Types::HiddenStatus)
+                )
         && !geometry().contains(QCursor::pos())
     );
 }
